tests/fails/opaque2.t
if not require("fail") then return end


terra what(a : opaque)
end


what:compile()
